--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "express-interceptor": "^1.2.0",
     "express-rate-limit": "^7.3.1",
     "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.7.0",
     "nodemailer": "^6.9.13",
     "passport": "^0.7.0",
     "passport-kakao": "^1.0.1",
+    "pg": "^8.11.3",
     "pm2": "^5.3.1"
   }
 }
