--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express-rate-limit": "^7.3.1",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.7.0",
+    "mongoose": "^8.4.3",
     "nodemailer": "^6.9.13",
     "passport": "^0.7.0",
     "passport-kakao": "^1.0.1",
