--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "passport": "^0.7.0",
     "passport-kakao": "^1.0.1",
     "pg": "^8.11.3",
-    "pm2": "^5.3.1"
+    "pm2": "^5.3.1",
+    "redis": "^4.6.13"
   }
 }
