--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,6 +23,7 @@ jobs:
           chmod 400 key.pem
           ssh -o StrictHostKeyChecking=no -i key.pem $USER@$HOST << 'EOF'
             cd ./calenduck/CalenDuck-backend
+            git reset --hard
             git pull origin master
             npx pm2 restart server.js            
           EOF
